--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,4 +13,5 @@ file(GLOB_RECURSE test_files
   *.h *.hpp *.cpp
 )
 add_executable(tests "${test_files}")
+target_include_directories(tests PUBLIC "${CMAKE_CURRENT_LIST_DIR}")
 target_link_libraries(tests Catch libpride)
