--- a/pride/CMakeLists.txt
+++ b/pride/CMakeLists.txt
@@ -4,6 +4,8 @@ target_include_directories(libpride INTERFACE
   $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>
   $<INSTALL_INTERFACE:include>
 )
+sf_set_cxxstd(libpride 17)
+set_compile_flags(libpride)
 
 # custom target for ides
 file(GLOB_RECURSE pride_sources "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
