--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,3 +15,4 @@ file(GLOB_RECURSE test_files
 add_executable(tests "${test_files}")
 target_include_directories(tests PUBLIC "${CMAKE_CURRENT_LIST_DIR}")
 target_link_libraries(tests Catch libpride)
+add_filter_group("${test_files}" "${CMAKE_CURRENT_LIST_DIR}")
