--- a/pride/CMakeLists.txt
+++ b/pride/CMakeLists.txt
@@ -1,13 +1,11 @@
 
-add_library(libpride INTERFACE)
+file(GLOB_RECURSE pride_source_files
+  "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
+)
+
+add_interface_library(libpride IDE_TARGET pride SOURCES ${pride_source_files})
+target_common_compiler_flags(libpride)
 target_include_directories(libpride INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
   $<INSTALL_INTERFACE:include>
 )
-sf_set_cxxstd(libpride 17)
-set_compile_flags(libpride)
-
-# custom target for ides
-file(GLOB_RECURSE pride_sources "${CMAKE_CURRENT_LIST_DIR}/*.hpp")
-add_custom_target(pride SOURCES "${pride_sources}")
-add_filter_group("${pride_sources}" "${CMAKE_CURRENT_LIST_DIR}")
