Change library creation to use new scaffold create_interface_library macro

--- a/pride/CMakeLists.txt
+++ b/pride/CMakeLists.txt
@@ -1,11 +1,7 @@
 
-file(GLOB_RECURSE pride_source_files
-  "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
-)
-
-add_interface_library(libpride IDE_TARGET pride SOURCES ${pride_source_files})
-target_common_compiler_flags(libpride)
-target_include_directories(libpride INTERFACE
+file(GLOB_RECURSE pride_sources "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
+create_interface_library(pride SOURCE_LIST ${pride_sources} CXX_VERSION 17)
+target_include_directories(${PRIDE_LIB} INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
   $<INSTALL_INTERFACE:include>
 )
