add benchmarks for hash

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,18 +1,18 @@
-include(git_clone)
-
-git_clone(catch "https://github.com/cruizemissile/catch2" "${CMAKE_SOURCE_DIR}/external")
-
 option(CATCH_USE_VALGRIND "Perform SelfTests with Valgrind" OFF)
 option(CATCH_BUILD_EXAMPLES "Build documentation examples" OFF)
 option(CATCH_ENABLE_COVERAGE "Generate coverage for codecov.io" OFF)
 option(CATCH_ENABLE_WERROR "Enable all warnings as errors" ON)
-
-add_subdirectory("${CMAKE_SOURCE_DIR}/external/catch" "${CMAKE_BINARY_DIR}/external/catch")
+add_external_git_repo(
+  URL "https://github.com/cruizemissile/catch2.git"
+  TAG master
+  PREFIX "external/catch"
+)
 
 file(GLOB_RECURSE test_files
   *.h *.hpp *.cpp
 )
 add_executable(tests "${test_files}")
 target_include_directories(tests PUBLIC "${CMAKE_CURRENT_LIST_DIR}")
-target_link_libraries(tests Catch libpride)
+target_link_libraries(tests Catch ${PRIDE_LIB})
 target_source_group(tests)
+target_set_folder(tests "Tests")
