--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(pride)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/external/scaffold")
 include(scaffold)
+include(astyle)
 
 sf_check_master_project(PRIDE_MASTER_PROJECT)
 option(PRIDE_ENABLE_BENCHMARKS "Enable building and testing benchmarks for pride" ${PRIDE_MASTER_PROJECT})
@@ -10,6 +11,8 @@ option(PRIDE_ENABLE_SAMPLES "Enable building and testing samples for pride" ${PR
 option(PRIDE_ENABLE_TESTING "Enable building and testing test for pride" ${PRIDE_MASTER_PROJECT})
 
 add_subdirectory(pride)
+sf_astyle_add_target(${PRIDE_LIB})
+sf_astype_create_command()
 
 if (PRIDE_ENABLE_BENCHMARKS AND NOT NO_TESTS)
   add_subdirectory(benchmarks)
