--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,9 @@ option(PRIDE_ENABLE_BENCHMARKS "Enable building and testing benchmarks for pride
 option(PRIDE_ENABLE_SAMPLES "Enable building and testing samples for pride" ${PRIDE_MASTER_PROJECT})
 option(PRIDE_ENABLE_TESTING "Enable building and testing test for pride" ${PRIDE_MASTER_PROJECT})
 
+option(ENABLE_ASTYLE "Enable formatting with astyle" ${PRIDE_MASTER_PROJECT})
+
 add_subdirectory(pride)
-sf_astyle_add_target(${PRIDE_LIB})
-sf_astype_create_command()
 
 if (PRIDE_ENABLE_BENCHMARKS AND NOT NO_TESTS)
   add_subdirectory(benchmarks)
@@ -24,4 +24,10 @@ endif()
 
 if (PRIDE_ENABLE_TESTING AND NOT NO_TESTS)
   add_subdirectory(tests)
+endif()
+
+if(ENABLE_ASTYLE)
+  include(astyle)
+  sf_astyle_add_target(${PRIDE_LIB})
+  sf_astype_create_command()
 endif()
