--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,6 @@ project(pride)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/external/scaffold")
 include(scaffold)
-include(astyle)
 
 sf_check_master_project(PRIDE_MASTER_PROJECT)
 option(PRIDE_ENABLE_BENCHMARKS "Enable building and testing benchmarks for pride" ${PRIDE_MASTER_PROJECT})
@@ -11,6 +10,7 @@ option(PRIDE_ENABLE_SAMPLES "Enable building and testing samples for pride" ${PR
 option(PRIDE_ENABLE_TESTING "Enable building and testing test for pride" ${PRIDE_MASTER_PROJECT})
 
 option(ENABLE_ASTYLE "Enable formatting with astyle" ${PRIDE_MASTER_PROJECT})
+option(ENABLE_CPPCHECK "Enable static analisys with cppcheck" ${PRIDE_MASTER_PROJECT})
 
 add_subdirectory(pride)
 
@@ -26,8 +26,16 @@ if (PRIDE_ENABLE_TESTING AND NOT NO_TESTS)
   add_subdirectory(tests)
 endif()
 
+sf_setup_modules()
+
 if(ENABLE_ASTYLE)
   include(astyle)
   sf_astyle_add_target(${PRIDE_LIB})
   sf_astype_create_command()
+endif()
+
+if(ENABLE_CPPCHECK)
+  include(cppcheck)
+  sf_cppcheck_add_target(${PRIDE_LIB})
+  sf_cppcheck_create_command()
 endif()
