--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ option(PRIDE_ENABLE_SAMPLES "Enable building and testing samples for pride" ${PR
 option(PRIDE_ENABLE_TESTING "Enable building and testing test for pride" ${PRIDE_MASTER_PROJECT})
 
 option(ENABLE_ASTYLE "Enable formatting with astyle" OFF)
+option(ENABLE_CLANGFORMAT "Enable formatting with clang-format" ON)
 option(ENABLE_CPPCHECK "Enable static analisys with cppcheck" OFF)
 
 add_subdirectory(pride)
@@ -32,6 +33,12 @@ if(ENABLE_ASTYLE)
   include(astyle)
   sf_astyle_add_target(${PRIDE_LIB})
   sf_astype_create_command()
+endif()
+
+if(ENABLE_CLANGFORMAT)
+  include(clangformat)
+  sf_clangformat_add_target(${PRIDE_LIB})
+  sf_clangformat_create_command()
 endif()
 
 if(ENABLE_CPPCHECK)
