cleanup main cmakelist file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,8 @@ option(PRIDE_ENABLE_BENCHMARKS "Enable building and testing benchmarks for pride
 option(PRIDE_ENABLE_SAMPLES "Enable building and testing samples for pride" ${PRIDE_MASTER_PROJECT})
 option(PRIDE_ENABLE_TESTING "Enable building and testing test for pride" ${PRIDE_MASTER_PROJECT})
 
-option(ENABLE_ASTYLE "Enable formatting with astyle" OFF)
-option(ENABLE_CLANGFORMAT "Enable formatting with clang-format" OFF)
-option(ENABLE_CLANGTIDY "Enable static analisys with cppcheck" OFF)
+option(ENABLE_CLANG_FORMAT "Enable formatting with clang-format" OFF)
+option(ENABLE_CLANG_TIDY "Enable static analisys with cppcheck" OFF)
 option(ENABLE_CPPCHECK "Enable static analisys with cppcheck" OFF)
 option(ENABLE_CODECOV "Enable code coverage reports with codecov" OFF)
 
@@ -31,19 +30,13 @@ endif()
 
 sf_setup_modules()
 
-if(ENABLE_ASTYLE)
-  include(astyle)
-  sf_astyle_add_target(${PRIDE_LIB})
-  sf_astype_create_command()
-endif()
-
-if(ENABLE_CLANGFORMAT)
+if(ENABLE_CLANG_FORMAT)
   include(clangformat)
   sf_clangformat_add_target(${PRIDE_LIB})
   sf_clangformat_create_command()
 endif()
 
-if(ENABLE_CLANGTIDY)
+if(ENABLE_CLANG_TIDY)
   include(clangtidy)
   sf_clangtidy_add_target(${PRIDE_LIB})
   sf_clangtidy_create_command()
