--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,7 @@ sf_add_external_git_repo(
 
 if(EXISTS ${CMAKE_SOURCE_DIR}/external/catch/.git)
   sf_create_executable(
-    tests                                 # name of the test executable
+    test                                  # name of the test executable
     DIRECTORY "${CMAKE_CURRENT_LIST_DIR}" # directory where scaffold will look for all the files
     DEPENDS Catch ${PRIDE_LIB}            # the external libraries that this executable depends on
     FOLDER Tests                          # In an IDE this target will be under the folder "Tests"
