--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
 #
 language: cpp
 dist: trusty
+sudo: true
 
 #
 # Build Dependencies
@@ -86,23 +87,22 @@ matrix:
           - ubuntu-toolchain-r-test
           - llvm-toolchain-trusty-6.0
         packages:
-          - clang-6.0
           - clang-format-6.0
     script:
+      - mkdir -p latest-clang-format-symlink
+      - ln -s /usr/bin/clang-format-6.0 latest-clang-format-symlink/clang-format
+      - export PATH=$PWD/latest-clang-format-symlink:$PATH
       - which clang-format
       - clang-format --version
-      - clang-format-6.0 --version
-      - which clang-format
-      - which clang-format-6.0
-      # - cmake -DENABLE_CLANG_FORMAT=ON -DCMAKE_CXX_COMPILER="clang-6.0" ..
-      # - make format
-      # - |
-      #   if [[ -n $(git diff) ]]; then
-      #     echo "You must run make format before submitting a pull request"
-      #     echo ""
-      #     git diff
-      #     exit -1
-      #   fi
+      - cmake -DENABLE_CLANG_FORMAT=ON -DCMAKE_CXX_COMPILER="clang-6.0" ..
+      - make format
+      - |
+        if [[ -n $(git diff) ]]; then
+          echo "You must run make format before submitting a pull request"
+          echo ""
+          git diff
+          exit -1
+        fi
 
 
   #
