--- a/.travis.yml
+++ b/.travis.yml
@@ -109,48 +109,48 @@ matrix:
   #
   # Clang Tidy
   #
-  - os: linux
-    env:
-      - TEST="Clang Tidy"
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-          - llvm-toolchain-trusty-6.0
-        packages:
-          - clang-6.0
-          - clang-tidy-6.0
-    script:
-      - cmake -DENABLE_CLANG_TIDY=ON -DNO_TESTS=ON -DCMAKE_CXX_COMPILER="clang-6.0" ..
-      - make tidy > output.txt
-      - |
-        if [[ -n $(grep "warning: " output.txt) ]] || [[ -n $(grep "error: " output.txt) ]]; then
-            echo "You must pass the clang tidy checks before submitting a pull request"
-            echo ""
-            grep --color -E '^|warning: |error: ' output.txt
-            exit -1;
-        else
-            echo -e "\033[1;32m\xE2\x9C\x93 passed:\033[0m $1";
-        fi
+  # - os: linux
+  #   env:
+  #     - TEST="Clang Tidy"
+  #   addons:
+  #     apt:
+  #       sources:
+  #         - ubuntu-toolchain-r-test
+  #         - llvm-toolchain-trusty-6.0
+  #       packages:
+  #         - clang-6.0
+  #         - clang-tidy-6.0
+  #   script:
+  #     - cmake -DENABLE_CLANG_TIDY=ON -DNO_TESTS=ON -DCMAKE_CXX_COMPILER="clang-6.0" ..
+  #     - make tidy > output.txt
+  #     - |
+  #       if [[ -n $(grep "warning: " output.txt) ]] || [[ -n $(grep "error: " output.txt) ]]; then
+  #           echo "You must pass the clang tidy checks before submitting a pull request"
+  #           echo ""
+  #           grep --color -E '^|warning: |error: ' output.txt
+  #           exit -1;
+  #       else
+  #           echo -e "\033[1;32m\xE2\x9C\x93 passed:\033[0m $1";
+  #       fi
 
   #
   # CppCheck
   #
-  - os: linux
-    env:
-      - TEST="CppCheck"
-    addons:
-      apt:
-        sources:
-          - ubuntu-toolchain-r-test
-        packages:
-          - gcc-8
-          - g++-8
-    script:
-      - cmake -DENABLE_CPPCHECK=ON -DNO_TESTS=ON -DCMAKE_CXX_COMPILER="g++-8" ..
-      - make
-      - make install
-      - make check
+  # - os: linux
+  #   env:
+  #     - TEST="CppCheck"
+  #   addons:
+  #     apt:
+  #       sources:
+  #         - ubuntu-toolchain-r-test
+  #       packages:
+  #         - gcc-8
+  #         - g++-8
+  #   script:
+  #     - cmake -DENABLE_CPPCHECK=ON -DNO_TESTS=ON -DCMAKE_CXX_COMPILER="g++-8" ..
+  #     - make
+  #     - make install
+  #     - make check
 
   #
   # Codecov
