--- a/pride/CMakeLists.txt
+++ b/pride/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-file(GLOB_RECURSE pride_sources "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
+file(GLOB_RECURSE pride_sources "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
 sf_create_interface_library(pride SOURCE_LIST ${pride_sources} CXX_VERSION 17)
 target_include_directories(${PRIDE_LIB} INTERFACE
   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
