make sure that pride is the master project in main Cmakelist file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,38 +16,38 @@ option(ENABLE_CODECOV "Enable code coverage reports with codecov" OFF)
 
 add_subdirectory(pride)
 
-if (ENABLE_BENCHMARKS)
+if (ENABLE_BENCHMARKS AND PRIDE_MASTER_PROJECT)
   add_subdirectory(benchmarks)
 endif()
 
-if (ENABLE_SAMPLES)
+if (ENABLE_SAMPLES AND PRIDE_MASTER_PROJECT)
   add_subdirectory(samples)
 endif()
 
-if (ENABLE_TESTING AND NOT NO_TESTS)
+if (ENABLE_TESTING AND PRIDE_MASTER_PROJECT AND NOT NO_TESTS)
   add_subdirectory(tests)
 endif()
 
 sf_setup_modules()
 
-if(ENABLE_CLANG_FORMAT)
+if(ENABLE_CLANG_FORMAT AND PRIDE_MASTER_PROJECT)
   include(clangformat)
   sf_clangformat_add_target(${PRIDE_LIB})
   sf_clangformat_create_command()
 endif()
 
-if(ENABLE_CLANG_TIDY)
+if(ENABLE_CLANG_TIDY AND PRIDE_MASTER_PROJECT)
   include(clangtidy)
   sf_clangtidy_add_target(${PRIDE_LIB})
   sf_clangtidy_create_command()
 endif()
 
-if(ENABLE_CPPCHECK)
+if(ENABLE_CPPCHECK AND PRIDE_MASTER_PROJECT)
   include(cppcheck)
   sf_cppcheck_add_target(${PRIDE_LIB} EXCLUDE_REGEX_LIST "cli" "fmt")
   sf_cppcheck_create_command(CHECKS warning,performance)
 endif()
 
-if(ENABLE_CODECOV)
+if(ENABLE_CODECOV AND PRIDE_MASTER_PROJECT)
   include(codecov)
 endif()
