--- a/appveryor.yml
+++ b/appveryor.yml
@@ -1,46 +1,78 @@
+image:
+  - Visual Studio 2017
 
-os: Visual Studio 2017
-platform: x64
+branches:
+  only:
+    - master
+    - appveyor
+    - refactor
 
-#
-# Custom environment variables
-#
 environment:
-  global:
-    CYG_ROOT: C:\cygwin_ci_helloworld
-    CYG_BASH: C:\cygwin_ci_helloworld\bin\bash
-    CYG_MIRROR: http://mirrors.kernel.org/sourceware/cygwin/
-    CYG_PACKAGES: git,make,gcc-core,gcc-g++,cmake
+  matrix:
+    - BUILD_SYSTEM: CMake
+      GENERATOR: Visual Studio 15 2017 Win64
+      CONFIG_TYPE: Release
 
-test: off
+    - BUILD_SYSTEM: CMake
+      GENERATOR: Visual Studio 15 2017
+      CONFIG_TYPE: Release
 
-#
-# Setup Cygwin
-#
-install:
-  - ps: 'Start-FileDownload "https://cygwin.com/setup-x86_64.exe" -FileName "setup-x86_64.exe"'
-  - 'setup-x86_64.exe --quiet-mode --no-shortcuts --only-site --root "%CYG_ROOT%" --site "%CYG_MIRROR%" --local-package-dir "%CYG_ROOT%\var\cache\setup" --packages "%CYG_PACKAGES%"'
-
-#
-# Build
-#
+before_build:
+  - ps: |
+      git submodule update --init --recursive
+      cmake . -Bbuild -G "$env:GENERATOR"
 build_script:
+  - ps: |
+      cmake --build build --config $env:CONFIG_TYPE -- /m /v:minimal
 
-  #
-  # Cygwin
-  #
-  - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER; mkdir build_cygwin"'
-  - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin; cmake .."'
-  - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin; make"'
-  - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin/tests; ctest"'
+# os: Visual Studio 2017
+# platform: x64
 
-  #
-  # Visual Studio (MSBuild)
-  #
-  - mkdir build_msbuild
-  - cd build_msbuild
-  - cmake -G "Visual Studio 15 2017 Win64" ..
-  - cmake --build .
-  - cd tests
-  - ctest
-  - cd ../..
+# branches:
+#   only:
+#     - master
+#     - develop
+
+# #
+# # Custom environment variables
+# #
+# environment:
+#   global:
+#     CYG_ROOT: C:\cygwin_ci_helloworld
+#     CYG_BASH: C:\cygwin_ci_helloworld\bin\bash
+#     CYG_MIRROR: http://mirrors.kernel.org/sourceware/cygwin/
+#     CYG_PACKAGES: git,make,gcc-core,gcc-g++,cmake
+
+# test: off
+
+# #
+# # Setup Cygwin
+# #
+# install:
+#   - ps: 'Start-FileDownload "https://cygwin.com/setup-x86_64.exe" -FileName "setup-x86_64.exe"'
+#   - 'setup-x86_64.exe --quiet-mode --no-shortcuts --only-site --root "%CYG_ROOT%" --site "%CYG_MIRROR%" --local-package-dir "%CYG_ROOT%\var\cache\setup" --packages "%CYG_PACKAGES%"'
+
+# #
+# # Build
+# #
+# build: off
+# build_script:
+
+#   #
+#   # Cygwin
+#   #
+#   - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER; mkdir build_cygwin"'
+#   - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin; cmake .."'
+#   - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin; make"'
+#   - '%CYG_BASH% -lc "cd $APPVEYOR_BUILD_FOLDER/build_cygwin/tests; ctest"'
+
+#   #
+#   # Visual Studio (MSBuild)
+#   #
+#   - mkdir build_msbuild
+#   - cd build_msbuild
+#   - cmake -G "Visual Studio 15 2017 Win64" ..
+#   - cmake --build .
+#   - cd tests
+#   - ctest
+#   - cd ../..
